fix replit db env var collision

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=8787
 NODE_ENV=development
 
 # Local DB for MVP (SQLite)
-DATABASE_URL="file:./dev.db"
+PROOFAGE_DATABASE_URL="file:./dev.db"
 
 # Callback authentication from verifier provider
 VERIFIER_CALLBACK_SECRET=dev_verifier_secret_change_me
